--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,9 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+
+.containerProduct{
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px rgb(151, 148, 148);
+}
